--- a/app/views/edit-event.html
+++ b/app/views/edit-event.html
@@ -4,13 +4,13 @@
         <h3 ng-show="editName"><input type="text" ng-blur="toggleEditName()" name="event-name" id="event-name" yg-model-object="event" yg-model-property="name"/></h3>
     </div>
     <yg-drop-target yg-drop-callback="addAspect" data-yg-drop-accept=".aspect" class="section-body">
-        <label for="start">{{resourceBundle().START}}</label>
+        <label for="start">{{resourceBundle().get("START")}}</label>
         <input type="text" name="start" id="start" yg-date yg-model-object="event"  yg-model-property="start" />
 
-        <label for="end">{{resourceBundle().END}}</label>
+        <label for="end">{{resourceBundle().get("END")}}</label>
         <input type="text" name="end" id="end" yg-date yg-model-object="event"  yg-model-property="end" />
 
-        <label for="description">Description</label>
+        <label for="description">{{resourceBundle().get("DESCRIPTION")}}</label>
         <textarea name="description" id="description" yg-model-object="event"  yg-model-property="description"></textarea>
 
         <div id="edit-event-aspects" class="edit-sub-elements" yg-accordion yg-accordion-header=".edit-sub-element-header" yg-accordion-refresh="refresh">
