--- a/app/views/header.html
+++ b/app/views/header.html
@@ -2,24 +2,24 @@
     <h1>Logo</h1>
     <nav>
         <div class="dropdown" id="file-menu">
-            <div class="dropdown-toggle" data-toggle="dropdown" data-target="#"><i class="icon-file"></i> <span>{{resourceBundle().FILE}}</span></div>
+            <div class="dropdown-toggle" data-toggle="dropdown" data-target="#"><i class="icon-file"></i> <span>{{resourceBundle().get("FILE")}}</span></div>
             <ul class="dropdown-menu" role="menu">
-                <li><a tabindex="-1" href="#">{{resourceBundle().NEW}}</a></li>
+                <li><a tabindex="-1" href="#">{{resourceBundle().get("NEW")}}</a></li>
             </ul>
         </div>
 
         <div class="dropdown">
-            <div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" data-target="#"><i class="icon-pencil"></i> <span>{{resourceBundle().EDIT}}</span></div>
+            <div class="dropdown-toggle" id="dropdownMenu" data-toggle="dropdown" data-target="#"><i class="icon-pencil"></i> <span>{{resourceBundle().get("EDIT")}}</span></div>
             <ul class="dropdown-menu" role="menu">
-                <li ng-class="{disabled: !canUndo()}"><a href="" tabindex="-1" ng-click="undo()">{{resourceBundle().UNDO}} {{undoName()}}</a></li>
-                <li ng-class="{disabled: !canRedo()}"><a href="" tabindex="-1" ng-click="redo()">{{resourceBundle().REDO}} {{redoName()}}</a><li>
+                <li ng-class="{disabled: !canUndo()}"><a href="" tabindex="-1" ng-click="undo()">{{resourceBundle().get("UNDO")}} {{undoName()}}</a></li>
+                <li ng-class="{disabled: !canRedo()}"><a href="" tabindex="-1" ng-click="redo()">{{resourceBundle().get("REDO")}} {{redoName()}}</a><li>
                 <li class="divider"></li>
                 <li class="dropdown-submenu">
-                    <a tabindex="-1" href="#">{{resourceBundle().NEW}}</a>
+                    <a tabindex="-1" href="#">{{resourceBundle().get("NEW")}}</a>
                     <ul class="dropdown-menu">
-                        <li><a href="" tabindex="-1" ng-click="newEvent()">{{resourceBundle().EVENT}}</a><li>
-                        <li><a href="" tabindex="-1" ng-click="newType()">{{resourceBundle().TYPE}}</a><li>
-                        <li><a href="" tabindex="-1" ng-click="newAspect()">{{resourceBundle().ASPECT}}</a><li>
+                        <li><a href="" tabindex="-1" ng-click="newEvent()">{{resourceBundle().get("EVENT")}}</a><li>
+                        <li><a href="" tabindex="-1" ng-click="newType()">{{resourceBundle().get("TYPE")}}</a><li>
+                        <li><a href="" tabindex="-1" ng-click="newAspect()">{{resourceBundle().get("ASPECT")}}</a><li>
                     </ul>
                 </li>
             </ul>
