--- a/app/views/header.html
+++ b/app/views/header.html
@@ -4,7 +4,7 @@
         <div class="dropdown" id="file-menu">
             <div class="dropdown-toggle" data-toggle="dropdown" data-target="#"><i class="icon-file"></i> <span>{{resourceBundle().get("FILE")}}</span></div>
             <ul class="dropdown-menu" role="menu">
-                <li><a tabindex="-1" href="#">{{resourceBundle().get("NEW")}}</a></li>
+                <li><a tabindex="-1" href="#" ng-click="newTimeline()">{{resourceBundle().get("NEW")}}</a></li>
             </ul>
         </div>
 
