screen for no timeline, adding open functionality

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -650,6 +650,10 @@ h6 {
 /* OVERRIDES */
 /* ************************************************************** */
 
+.container {
+    max-width: none;
+}
+
 .ui-widget-content {
     background-color: #ffffff;
 }
