--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,15 +1,7 @@
 <ng-include src="'views/header.html'"></ng-include>
 
 <br/><br/>
-<ng-include src="'views/title-bar.html'"></ng-include>
-
-<div id="upper-container">
-    <ng-include src="'views/elements-list.html'"></ng-include>
-
-    <ng-include src="showEditScreen()"></ng-include>
-</div>
-
-<ng-include src="'views/timeline.html'"></ng-include>
+<ng-include src="getBodyScreen()"></ng-include>
 
 <footer>
     bottom
