--- a/app/views/confirm-modal.html
+++ b/app/views/confirm-modal.html
@@ -3,10 +3,10 @@
         <div class="modal-content">
             <div class="modal-body">
                 {{message}}
-                <div>
-                    <button ng-click="cancelFunction()">{{cancelLabel}}</button>
-                    <button ng-click="confirmFunction()">{{confirmLabel}}</button>
-                </div>
+            </div>
+            <div class="modal-footer">
+                <button ng-click="cancelFunction()">{{cancelLabel}}</button>
+                <button ng-click="confirmFunction()">{{confirmLabel}}</button>
             </div>
         </div>
     </div>
