--- a/app/views/open-timeline-modal.html
+++ b/app/views/open-timeline-modal.html
@@ -1,9 +1,10 @@
 <div ng-controller="OpenTimelineModalCtrl">
     <div>
-        <div ng-repeat="timeline in timelines" ng-click="openTimeline(timeline.id)">
-            <div>{{timeline.name}}</div>
+        <div ng-repeat="timeline in timelines" ng-click="selectTimeline(timeline.id)">
+            <div ng-class="{'selected': isTimelineSelected(timeline.id)}">{{timeline.name}}</div>
             <div></div>
         </div>
     </div>
     <button ng-click="closeModal()">Close</button>
+    <button ng-click="openTimeline()" ng-disabled="!isTimelineSelected()">Open</button>
 </div>
