--- a/app/views/edit-timeline.html
+++ b/app/views/edit-timeline.html
@@ -3,6 +3,7 @@
         <h3></h3>
     </div>
     <div class="section-body">
-        Edit timeline
+        <label for="description">Description</label>
+        <textarea yg-model-object="timeline" yg-model-property="description" id="description" name="description"></textarea>
     </div>
 </section>
