--- a/app/views/edit-type.html
+++ b/app/views/edit-type.html
@@ -1,7 +1,7 @@
 <section id="edit-type" class="edit-screen" ng-controller="EditTypeCtrl">
 
     <div class="section-header">
-        <div class="icon" ng-bind-html-unsafe="type.icon"></div>
+        <div class="icon" ng-bind-html="trustAsHtml(type.icon)"></div>
         <h3 ng-show="!editName" ng-click="toggleEditName()">{{type.name}}</h3>
         <h3 ng-show="editName"><input type="text" ng-blur="toggleEditName()" name="type-name" id="type-name" yg-model-object="type" yg-model-property="name"/></h3>
     </div>
